--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "vant": "^2.12.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
