--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^5.0.0",
     "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^10.1.1",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
